# scorable-sdk

./: .pre-commit-config.yaml  CHANGELOG.html  README.md  async_support.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  release_notes.html  search.html  searchindex.js  setup.html
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: generate-documentation.yaml  validate-cli.yaml  validate-ts.yaml  validate.yaml
_sources/: CHANGELOG.md.txt
autoapi/: index.html
autoapi/scorable/: index.html
cli/: .gitignore  CHANGELOG.md  README.md  cli.py  install.sh  oxlint.json  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
cli/examples/otel-filters/: claude-code.yaml  genai-explicit.yaml  openinference-agent.yaml
cli/src/: auth.ts  cli.ts  client.ts  index.ts  output.ts  types.ts  utils.ts
cli/src/commands/: skills-add.ts
cli/src/commands/annotation/: index.ts
cli/src/commands/auth/: index.ts
cli/src/commands/calibration-run/: index.ts
cli/src/commands/dataset-item/: index.ts
cli/src/commands/evaluator/: calibrate.ts  create.ts  delete.ts  duplicate.ts  execute-by-name.ts  execute.ts  export-yaml.ts  get.ts  import-yaml.ts  index.ts  list.ts  update.ts
cli/src/commands/execution-log/: get.ts  index.ts  list.ts
cli/src/commands/file/: index.ts  upload.ts
cli/src/commands/judge/: create.ts  delete.ts  duplicate.ts  exec-openai-generic.ts  exec-openai.ts  execute-by-name.ts  execute.ts  generate.ts  get.ts  index.ts  list.ts  update.ts
cli/src/commands/model/: create.ts  delete.ts  get.ts  index.ts  list.ts  update.ts
cli/src/commands/otel-filter/: create.ts  delete.ts  index.ts  list.ts  update.ts  validate.ts
cli/src/commands/otel-trace/: index.ts  list.ts  shared.ts  spans.ts
cli/src/commands/project/: create.ts  delete.ts  get.ts  index.ts  list.ts  set-default.ts  update.ts
cli/src/commands/prompt-test/: index.ts  init.ts  run.ts
cli/src/lib/: filter-yaml.ts  project-id.ts
cli/tests/: annotation.test.ts  auth-project.test.ts  auth.test.ts  calibration-run.test.ts  dataset-item.test.ts  evaluator-calibrate.test.ts  evaluator.test.ts  execution-log.test.ts  judge.test.ts  model.test.ts  otel-filter-yaml.test.ts  otel-filter.test.ts  otel-trace.test.ts  project-id.test.ts  project.test.ts  prompt-test.test.ts  test_cli.py
cli/tests/helpers/: mock-api.ts  run-cli.ts
python/: Makefile  README.md  openapi.yaml  pyproject.toml
python/docs/: CHANGELOG.md  examples.md
python/examples/: async_custom_evaluator.py  calibration.py  custom_evaluator.py  execution_logs.py  judge_multi_turn.py  model.py  multi_turn_conversation.py  run_rag.py  run_tagging.py
python/src/scorable/: __about__.py  __init__.py  _polling.py  annotations.py  calibration.py  calibration_runs.py  client.py  datasets.py  execution_logs.py  files.py  judges.py  models.py  multiturn.py  objectives.py  projects.py  score_configs.py  skills.py
python/tests/: test_acalibrate.py  test_acalibrate_batch.py  test_annotations.py  test_calibrate.py  test_calibrate_batch.py  test_calibration_handle.py  test_calibration_runs.py  test_dataset_items.py  test_evaluator_calibration.py  test_evaluators.py  test_execution_logs.py  test_judges.py  test_polling.py  test_projects.py  test_score_configs.py
ts/: hierarchy.html  index.html  modules.html
ts/assets/: hierarchy.js  highlight.css  navigation.js  search.js
ts/classes/: AnnotationsResource.html  CalibrationRunsResource.html  DatasetsResource.html  ProjectsResource.html  Scorable.html  ScorableError.html  ScoreConfigsResource.html
ts/interfaces/: AnnotationListParams.html  CalibrationRunListParams.html  ClientConfig.html  CreateAnnotationData.html  CreateCalibrationRunData.html  CreateJudgeData.html  CreateModelData.html  CreateObjectiveData.html  CreateProjectParams.html  EvaluatorCreateParams.html  EvaluatorListParams.html  (+15 more)
typescript/: CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
(+90 files in other folders)
