[project]
name = "scorable-cli"
version = "0.1.6"
description = "CLI for the Scorable API"
authors = [
    {name = "Scorable", email = "support@scorable.ai"},
]
dependencies = [
    "click",
    "requests",
    "pydantic",
    "rich",
    "pyyaml",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Homepage = "https://scorable.ai/"
Repository = "https://github.com/root-signals/rs-sdk"

[project.scripts]
scorable-cli = "cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>= 3.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
