[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scorable"
description = "The Python SDK for API of Scorable"
maintainers = [
  {name = "Ari Heljakka", email="ari.heljakka@scorable.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
  "aioitertools",
  "asgiref",
  "aiohttp>=3.13.4",
  "aiohttp_retry",
  "pydantic>=2.6.2, <3",
  "python-dateutil",
  "requests>=2.33.0",
  "typing-extensions",
  "validators",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
# These are essentially development dependencies (hatch installs ^ + these)
dev = [
  "furo", # sphinx theme
  "hatch",
  "mypy==1.20.1",
  "myst_parser",
  "pre-commit",
  "pytest-asyncio",
  "pytest>=9.0.3",
  "ruff",
  "sphinx-autoapi",
  "sphinx-markdown-builder",
  "sphinx",
  "twine", # for pypi uploads ( it has more convenient test/nontest handling than hatch)
  "types-requests",
  "validators",
]


[project.urls]
Homepage = "https://scorable.ai/"
Repository = "https://github.com/root-signals/rs-sdk"
CHANGELOG = "https://sdk.scorable.ai/en/latest/CHANGELOG.html"

[tool.hatch.build.targets.wheel]
packages = ["src/scorable"]

[tool.hatch.version]
path = "src/scorable/__about__.py"

[tool.mypy]
# Default target
files = "src/scorable/*.py"

exclude = ["tests", "src/scorable/generated"]
# ^ This doesn't seem to quite work, as when it is following the ^^
# imports it will give errors anyway. In Makefile we force it to
# ignore errors from not-explicitly-specified files.

# This enables bunch of checks
#
# Ideally we should use this someday. Especially with Python 3.8 base
# it is somewhat painful.
#
# strict = true

# and also this (not included in strict)
warn_unreachable = true

# Subset of strict options

# casting is bad, unnecessary casting worse
warn_redundant_casts = true

# unused type disables are confusing
warn_unused_ignores = true

# the code should be typed
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "T20"]
ignore = ["A002", "S101"]

[tool.ruff.lint.per-file-ignores]

# openapi generator doesn't produce particularly good output
"src/scorable/generated/**/*.py" = ["B904", "C", "E", "F", "N", "S110"]

# T201 = print statement, we use it intentionally
"examples/*.py" =  ["T201", "E501"]
"examples.py" =  ["T201", "E501"]


[tool.pytest.ini_options]
pythonpath = [
    "src",
    "tests",
]
